# Hartree-Fock-of-molecular

./: CMakeLists.txt  LICENSE  README
H2_6_31g_example/: out  rhf_singlet.json  rohf_singlet.json  rohf_triplet.json  uhf_singlet.json  uhf_singlet_break.json  uhf_singlet_keep.json  uhf_triplet.json
data/: copyright
src/: cal.cpp  cal.hpp  main.cpp
src/basis/: basis.cpp  basis.hpp
src/geometry/: geometry.cpp  geometry.hpp  getinfo.cpp  getinfo.hpp  periodic_table.h
src/hf/: rhf.cpp  rhf.h  rohf.cpp  rohf.h  uhf.cpp  uhf.h
src/integral/: integral.cpp  integral.hpp  kind1.cpp  kind1.h  kind2.cpp  kind2.h
src/scf/: mixing.cpp  mixing.h  occ.cpp  occ.h  scf.cpp  scf.h  scfset.cpp  scfset.h
src/somes/: error&warning.hpp  printer.h  time.h  transfer.h
